objects/ININ_Applications__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Core ACD &amp; Multi-Media</fullName>
                </value>
                <value>
                    <fullName>Development Environment</fullName>
                </value>
                <value>
                    <fullName>e-FAQ</fullName>
                </value>
                <value>
                    <fullName>Genesys WFM</fullName>
                </value>
                <value>
                    <fullName>Inbound Fax Processing</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Interaction Analyzer</fullName>
                </value>
                <value>
                    <fullName>Interaction Attendant (IVR)</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector</fullName>
                </value>
                <value>
                    <fullName>Interaction Conference</fullName>
                </value>
                <value>
                    <fullName>Interaction Content Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Decision</fullName>
                </value>
                <value>
                    <fullName>Interaction Dialer</fullName>
                </value>
                <value>
                    <fullName>Interaction Director</fullName>
                </value>
                <value>
                    <fullName>Interaction Easy Scripter</fullName>
                </value>
                <value>
                    <fullName>Interaction Feedback</fullName>
                </value>
                <value>
                    <fullName>Interaction Marquee</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Streaming Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Migrator</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobile Office</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobilizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Monitor</fullName>
                </value>
                <value>
                    <fullName>Interaction Optimizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Process Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Recorder</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Proxy</fullName>
                </value>
                <value>
                    <fullName>Interaction Supervisor</fullName>
                </value>
                <value>
                    <fullName>Interaction Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Resource_Guide__c</fullName>
        <label>Application Resource Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Site__c.Solution_Design__c</field>
                <operation>equals</operation>
                <valueField>$Source.Solution_Design__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipName>ININ_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>ININ Applications</relationshipLabel>
        <relationshipName>ININ_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Solution__c</fullName>
        <description>Please write a short summary of how the customer intents to use the application. Include any use cases, business impacting advantages, departments or teams that will utilize. Capture any information that would be helpful for the next ININ team engaged.</description>
        <label>PC Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PureCloud_Applications__c</fullName>
        <label>PureCloud Applications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud Directory</fullName>
                </value>
                <value>
                    <fullName>PureCloud Social Customer Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Contact Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureConnect_Cloud_Application_Name__c</fullName>
        <label>PureConnect Cloud Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Browse</fullName>
                </value>
                <value>
                    <fullName>Core ACD &amp; Multi-Media</fullName>
                </value>
                <value>
                    <fullName>Custom Integration</fullName>
                </value>
                <value>
                    <fullName>Dialer - Manual Calling Server (MCS)</fullName>
                </value>
                <value>
                    <fullName>Generic Objects</fullName>
                </value>
                <value>
                    <fullName>Genesys WFM</fullName>
                </value>
                <value>
                    <fullName>Inbound Fax Processing</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Chatbot</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Omnichannel Self Service</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Omnichannel Self Service Secure Payment</fullName>
                </value>
                <value>
                    <fullName>Intelligent Automation - Voicebot</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Interaction Analyzer</fullName>
                </value>
                <value>
                    <fullName>Interaction Attendant (IVR)</fullName>
                </value>
                <value>
                    <fullName>Interaction Call Scripter</fullName>
                </value>
                <value>
                    <fullName>Interaction Collector</fullName>
                </value>
                <value>
                    <fullName>Interaction Connect</fullName>
                </value>
                <value>
                    <fullName>Interaction Data Extractor</fullName>
                </value>
                <value>
                    <fullName>Interaction Decisions</fullName>
                </value>
                <value>
                    <fullName>Interaction Dialer</fullName>
                </value>
                <value>
                    <fullName>Interaction Feedback</fullName>
                </value>
                <value>
                    <fullName>Interaction Marquee</fullName>
                </value>
                <value>
                    <fullName>Interaction Media Streaming Server</fullName>
                </value>
                <value>
                    <fullName>Interaction Mobile Office</fullName>
                </value>
                <value>
                    <fullName>Interaction Optimizer</fullName>
                </value>
                <value>
                    <fullName>Interaction Process Automation</fullName>
                </value>
                <value>
                    <fullName>Interaction Quality Manager</fullName>
                </value>
                <value>
                    <fullName>Interaction Recorder</fullName>
                </value>
                <value>
                    <fullName>Interaction SIP Proxy</fullName>
                </value>
                <value>
                    <fullName>Interaction Speech Recognition (ISR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <inlineHelpText>Please write a short summary of how the customer intents to use the application. Include any use cases, business impacting advantages, departments or teams that will utilize. Capture any information that would be helpful for the next ININ team engaged.</inlineHelpText>
        <label>Solution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Design</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>ININ_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PureCloud_Applications__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active Directory</fullName>
                </value>
                <value>
                    <fullName>SQL Database</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>CIC</fullName>
                </value>
                <value>
                    <fullName>CIC Status</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synchronization__c</fullName>
        <label>Synchronization</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Push to Directory</fullName>
                </value>
                <value>
                    <fullName>Push to Source</fullName>
                </value>
                <value>
                    <fullName>Two-way sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{0000000}</displayFormat>
        <label>ININ Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ININ Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PureCloud_Directory_is_selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    TEXT(PureCloud_Applications__c) = &apos;PureCloud Directory&apos;,
    OR(
        ISCHANGED(Application_Name__c)))</errorConditionFormula>
        <errorDisplayField>Application_Name__c</errorDisplayField>
        <errorMessage>PureCloud Directory has been chosen, Application Name needs to be &quot;None&quot;.</errorMessage>
    </validationRules>
</CustomObject>